--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<%= link_to 'www.mashrurhossain.com' %>
+
+<%= link_to 'shirley.io' %>
 <%= link_to 'About', about_path %>
+<% p articles_path %>
+<% link_to "Alpha Blog", articles_path %> | <%= link_to "About", about_path %>
