signup users from ui

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,27 +1,24 @@
-<%= form_with(model: user, local: true) do |form| %>
-  <% if user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-      <ul>
-      <% user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+<% if @user.errors.any? %>
+  <h2>The following errors prevented the article from getting created</h2>
+    <ul>
+      <% @user.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :username %>
-    <%= form.text_field :username %>
-  </div>
-
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+    </ul>
+<% end %>
+<%= form_for @user do |f| %>
+  <p>
+    <%= f.text_field :username, placeholder: "enter username", autofocus: true %>
+  </p>
+  <p>
+    <%= f.label :email %><br/>
+    <%= f.email_field :email, placeholder: "enter email" %>
+  </p>
+  <p>
+    <%= f.label :password %><br/>
+    <%= f.password_field :password, placeholder: "enter password" %>
+  </p>
+  <p>
+    <%= f.submit "sign up", class: "btn btn-primary" %>
+  </p>
 <% end %>
