--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,6 +10,17 @@
   </ul>
 <% end %>
 
+
+<h1 align = "center"> Welcome to  <% @user.username %>'s page</h1>'
+  <div class = "row">
+    <div class = "col-md-4 col-md-offset-4 center">
+      <%= gravatar_for @user %>
+    </div>
+  </div>
+  <h4 align="center"><%= @user.username %>'s articles</h4>'
+
+
+
   <%= form_for @article do |f| %>
     <p>
       <%= f.label :title %></br>
