--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,15 @@
-<p id="notice"><%= notice %></p>
+
+<% flash.each do |key, value| %>
+  <div class="alert alert-<%= key %>"><%= value %></div>
+<% end %>
+
+<h1 align = "center"> Welcome to  <% @user.username %>'s page</h1>'
+  <div class = "row">
+    <div class = "col-md-4 col-md-offset-4 center">
+      <%= gravatar_for @user %>
+    </div>
+  </div>
+  <h4 align="center"><%= @user.username %>'s articles</h4>'
 
 <p>
   <strong>Username:</strong>
@@ -9,6 +20,10 @@
   <strong>Email:</strong>
   <%= @user.email %>
 </p>
+
+<%= render 'articles/article', obj: @user.articles %>
+
+
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
