--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Edit Article</h1>
+<h1>show Article</h1>
 
 <% if @article.errors.any? %>
   <ul>
@@ -11,29 +11,18 @@
 <% end %>
 
 
-<h1 align = "center"> Welcome to  <% @user.username %>'s page</h1>'
-  <div class = "row">
-    <div class = "col-md-4 col-md-offset-4 center">
-      <%= gravatar_for @user %>
-    </div>
-  </div>
-  <h4 align="center"><%= @user.username %>'s articles</h4>'
+
+    <tr>
+        <ul>
+          <li><%= link_to gravatar_for(@article.user), user_path(@article.user) %></li>
+          <li class="article-title"><%= link_to @article.user.username, user_path(@article.user) %></li>
+          <li><%= pluralize(@article.user.articles.count, "article") if @article.user.articles %></li>
+
+        </ul>
+    </tr>
 
 
 
-  <%= form_for @article do |f| %>
-    <p>
-      <%= f.label :title %></br>
-      <%= f.text_field :title %>
-    </p>
-    <p>
-      <%= f.label :description %></br>
-      <%= f.text_area :description %>
-    </p>
-    <p>
-      <%= f.submit %>
-    </p>
-<% end %>
 
 
 
