--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,11 +14,16 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.username %></td>
-        <td><%= user.email %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <ul>
+            <li><%= link_to gravatar_for(user), user_path(user) %></li>
+            <li class="article-title"><%= link_to user.username, user_path(user) %></li>
+            <li><%= pluralize(user.articles.count, "article") if user.articles %></li>
+            <!-- <td><%= user.username %></td>
+            <td><%= user.email %></td> -->
+            <!-- <td><%= link_to 'Show', user %></td>
+            <td><%= link_to 'Edit', edit_user_path(user) %></td>
+            <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
+          </ul>
       </tr>
     <% end %>
   </tbody>
