--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,16 +12,10 @@
   <h4 align="center"><%= @user.username %>'s articles</h4>'
 
 <p>
-  <strong>Username:</strong>
-  <%= @user.username %>
+  <%= will_paginate @user_articles %>
 </p>
 
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
-
-<%= render 'articles/article', obj: @user.articles %>
+<%= render 'articles/article', obj: @user_articles %>
 
 
 
