--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,29 +15,32 @@
       <ul class="nav navbar-nav">
         <li><%= link_to "Articles", articles_path %></li>
         <li>
-          <a href="#">Link</a>
+          <%= link_to "Users", users_path %>
         </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions
-            <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><%= link_to "New Article", new_article_path %></li>
-            <li>
-              <a href="#">Another action</a>
-            </li>
-            <li>
-              <a href="#">Something else here</a>
-            </li>
-            <li role="separator" class="divider"></li>
-            <li>
-              <a href="#">Separated link</a>
-            </li>
-            <li role="separator" class="divider"></li>
-            <li>
-              <a href="#">One more separated link</a>
-            </li>
+
+        <% if logged_in? %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions
+              <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "New Article", new_article_path %></li>
+              <li>
+                <a href="#">Another action</a>
+              </li>
+              <li>
+                <a href="#">Something else here</a>
+              </li>
+              <li role="separator" class="divider"></li>
+              <li>
+                <a href="#">Separated link</a>
+              </li>
+              <li role="separator" class="divider"></li>
+              <li>
+                <a href="#">One more separated link</a>
+              </li>
           </ul>
         </li>
+        <% end %>
       </ul>
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -50,30 +53,31 @@
           <a href="#">Link</a>
         </li>
         <% if logged_in? %>
-          <li><%= link_to 'Log out', logout_path, method: :delete %></li>
+        <li><%= link_to 'Log out', logout_path, method: :delete %></li>
 
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown
-              <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li>
-                <a href="#">Action</a>
-              </li>
-              <li>
-                <a href="#">Another action</a>
-              </li>
-              <li>
-                <a href="#">Something else here</a>
-              </li>
-              <li role="separator" class="divider"></li>
-              <li>
-                <a href="#">Separated link</a>
-              </li>
-            </ul>
-          </li>
-          <% else %>
-          <li> <%= link_to "login", login_path %>
-          <li> <%= link_to "signup", signup_path %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Your Profile
+            <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "edit your profile", edit_user_path(current_user) %></li>
+            <li>
+              <%= link_to "View your profile", user_path(current_user) %>
+            </li>
+            <li>
+              <a href="#">Another action</a>
+            </li>
+            <li>
+              <a href="#">Something else here</a>
+            </li>
+            <li role="separator" class="divider"></li>
+            <li>
+              <a href="#">Separated link</a>
+            </li>
+          </ul>
+        </li>
+        <% else %>
+        <li> <%= link_to "login", login_path %>
+        <li> <%= link_to "signup", signup_path %>
 
           <% end %>
       </ul>
