--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,4 +2,7 @@
 <%= link_to 'shirley.io' %>
 <%= link_to 'About', about_path %>
 <% p articles_path %>
+
+<%= link_to "Sign up now", signup_path, class: "btn btn-danger btn-lg"%>
+
 <% link_to "Alpha Blog", articles_path %> | <%= link_to "About", about_path %>
