--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -37,5 +37,7 @@
   <%= @article.description %>
 </p>
 
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Back', articles_path %>
+<% if logged_in? && (current_user == @article.user || current_user.admin?) %>
+  <%= link_to 'Edit', edit_article_path(@article) %> |
+  <%= link_to 'Back', articles_path %>
+<% end %>
