--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,6 +18,10 @@
             <li><%= link_to gravatar_for(user), user_path(user) %></li>
             <li class="article-title"><%= link_to user.username, user_path(user) %></li>
             <li><%= pluralize(user.articles.count, "article") if user.articles %></li>
+            <% if logged_in? and current_user.admin? %>
+              <li> <%= link_to "Delete this user", user_path(user), method: :delete, data: {confirm: "Are you sure you want to delete this user and all their articles?"}%></li>
+            <% end %>
+
             <!-- <td><%= user.username %></td>
             <td><%= user.email %></td> -->
             <!-- <td><%= link_to 'Show', user %></td>
